syntax="proto3";

message JoinMessage {
    int32 userId = 1;
    string userName = 2;
}

message JoinResponse {
    int32 sessionId = 1;
}

message PollMessage {
    int32 sessionId = 1;
}

message PollResponse {
    bool ready = 1;
}

service V1SessionService {
    rpc join(JoinMessage) returns (JoinResponse);
    rpc poll(PollMessage) returns (PollResponse);
}

message MoveMessage {
    int32 userId = 1;
    int32 sessionId = 2;
    int32 position = 3;
}

message MoveResponse {
    bool success = 1;
}

service V1PlayService {
    rpc playmove(MoveMessage) returns (MoveResponse);
}
